<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appsquared.votings.app.fragments.AccountRegisterInfoFragment"
    android:padding="32dp">

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_user"
        android:textSize="@dimen/headline_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginLeft="-4dp"
        android:inputType="textCapWords"
        android:hint="@string/firstname"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:id="@+id/editTextInviteUserNameFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="invisible"
        android:text="@string/please_enter_a_valid_firstname"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewInviteUserNameFirstError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextInviteUserNameFirst" />

    <EditText
        android:layout_marginLeft="-4dp"
        android:inputType="textCapWords"
        android:hint="@string/lastname"
        android:layout_marginTop="32dp"
        android:id="@+id/editTextInviteUserNameLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewInviteUserNameFirstError" />

    <TextView
        android:visibility="invisible"
        android:text="@string/please_enter_a_valid_lastname"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewInviteUserNameLastError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextInviteUserNameLast" />

    <EditText
        android:layout_marginLeft="-4dp"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail_address"
        android:layout_marginTop="32dp"
        android:id="@+id/editTextInviteUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewInviteUserNameLastError" />

    <TextView
        android:visibility="invisible"
        android:text="@string/please_indicate_a_valid_email"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewInviteUserMailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextInviteUserMail" />

    <appsquared.votings.app.views.ButtonCardView
        app:background_color="@color/colorAccent"
        app:text="@string/invite_user"
        android:id="@+id/buttonCardViewInviteUserSend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>