<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appsquared.votings.app.fragments.AccountRegisterInfoFragment"
    android:padding="32dp">

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_e_mail"
        android:textSize="@dimen/headline_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_marginLeft="-4dp"
        android:hint="@string/e_mail_address"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:id="@+id/editTextAccountRegisterMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="invisible"
        android:text="@string/please_indicate_a_valid_email"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewAccountRegisterEmailError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountRegisterMail"
        tools:layout_editor_absoluteX="32dp" />

    <CheckBox
        android:text="@string/i_accept_the"
        android:id="@+id/checkBoxAccountRegisterTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/buttonCardViewAccountRegisterMailPrevious"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountRegisterEmailError" />

    <TextView
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:paddingLeft="4dp"
        android:textSize="16sp"
        android:text="@string/terms_of_use"
        android:id="@+id/textViewAccountRegisterTermsClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxAccountRegisterTerms"
        app:layout_constraintStart_toEndOf="@+id/checkBoxAccountRegisterTerms"
        app:layout_constraintTop_toTopOf="@+id/checkBoxAccountRegisterTerms" />

    <TextView
        android:layout_marginLeft="32dp"
        android:visibility="invisible"
        android:text="@string/please_accept_terms_of_use"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewAccountRegisterEmailTermsError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAccountRegisterTerms" />

    <appsquared.votings.app.views.ButtonCardView
        android:id="@+id/buttonCardViewAccountRegisterMailPrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:background_color="@color/white"
        app:text_color="@color/colorAccent"
        app:border_size="5"
        app:border_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/buttonCardViewAccountRegisterMailNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/one_step_back" />

    <appsquared.votings.app.views.ButtonCardView
        app:background_color="@color/colorAccent"
        app:text="@string/next_step"
        android:id="@+id/buttonCardViewAccountRegisterMailNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>