<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appsquared.votings.app.fragments.AccountRegisterInfoFragment"
    android:padding="32dp">

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_what_is_your_name"
        android:textSize="@dimen/headline_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_marginLeft="-4dp"
        android:inputType="textCapWords"
        android:hint="@string/firstname"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:id="@+id/editTextAccountRegisterNameFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="invisible"
        android:text="@string/please_enter_a_valid_firstname"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewAccountRegisterNameFirstError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountRegisterNameFirst" />

    <EditText
        android:layout_marginLeft="-4dp"
        android:inputType="textCapWords"
        android:hint="@string/lastname"
        android:layout_marginTop="32dp"
        android:id="@+id/editTextAccountRegisterNameLast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountRegisterNameFirstError" />

    <TextView
        android:visibility="invisible"
        android:text="@string/please_enter_a_valid_lastname"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewAccountRegisterNameLastError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountRegisterNameLast" />

    <appsquared.votings.app.views.ButtonCardView
        app:background_color="@color/colorAccent"
        app:text="@string/next_step"
        android:id="@+id/buttonCardViewAccountRegisterNameNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>