<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appsquared.votings.app.fragments.VotingCreateInfoFragment"
    android:padding="32dp"
    android:focusable="true"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voting_create_titledetails_voting_title"
        android:textSize="@dimen/headline_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:maxLength="400"
        android:maxLines="1"
        android:layout_marginLeft="-4dp"
        android:inputType="textCapWords"
        android:hint="@string/voting_create_titledetails_voting_titlehint"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        android:id="@+id/editTextVotingCreateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"/>

    <TextView
        android:visibility="invisible"
        android:text="@string/voting_create_titledetails_voting_title_error"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewVotingCreateTitleError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextVotingCreateTitle" />

    <TextView
        android:layout_marginTop="48dp"
        android:id="@+id/textViewDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/voting_create_titledetails_voting_detail"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/headline_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVotingCreateTitleError" />

    <EditText
        android:layout_marginTop="16dp"
        android:layout_marginLeft="-4dp"
        android:hint="@string/voting_create_titledetails_voting_detailhint"
        android:id="@+id/editTextVotingCreateDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewDetails" />

    <appsquared.votings.app.views.ButtonCardView
        app:background_color="@color/colorAccent"
        app:text="@string/next_step"
        android:id="@+id/buttonCardViewVotingCreateTitleDetailsNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>