<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="appsquared.votings.app.fragments.AccountRegisterInfoFragment"
    android:padding="32dp">

    <TextView
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_is_your_workspace"
        android:textSize="@dimen/headline_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890-"
        android:hint="@string/workspace"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        android:id="@+id/editTextAccountRegisterWorkspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"/>

    <TextView
        android:visibility="invisible"
        android:textColor="@color/error"
        android:textSize="12sp"
        android:id="@+id/textViewAccountRegisterWorkspaceError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccountRegisterWorkspace" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/grey_230"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCardViewAccountRegisterWorkspacePrevious"
        app:layout_constraintTop_toBottomOf="@+id/textViewAccountRegisterWorkspaceError"
        tools:layout_editor_absoluteX="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:text="@string/workspace_info" />

    </com.google.android.material.card.MaterialCardView>

    <appsquared.votings.app.views.ButtonCardView
        android:id="@+id/buttonCardViewAccountRegisterWorkspacePrevious"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:background_color="@color/white"
        app:text_color="@color/colorAccent"
        app:border_size="5"
        app:border_color="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/buttonCardViewAccountRegisterWorkspaceNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:text="@string/one_step_back" />

    <appsquared.votings.app.views.ButtonCardView
        app:background_color="@color/colorAccent"
        app:text="@string/next_step"
        android:id="@+id/buttonCardViewAccountRegisterWorkspaceNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>